--- a/package.json
+++ b/package.json
@@ -7,5 +7,18 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.3.4",
     "node": "^20.4.0"
-  }
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0"
+  },
+    "husky": {
+      "hooks": {
+        "pre-commit": "lint-staged"
+      }
+    },
+    "lint-staged": {
+      "*.js": ["prettier --write", "git add"]
+    }
 }
